--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".SongListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SongDetailsPagerActivity"
+            android:parentActivityName=".SongListActivity"/>
     </application>
 
 </manifest>
