--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,8 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".SongDetailsPagerActivity"
-            android:parentActivityName=".SongListActivity"/>
+            android:parentActivityName=".SongListActivity">
+
+        </activity>
+
+        <service android:name=".OrangePlayerService" />
     </application>
 
 </manifest>
